Sat Jan 24 18:25:21 2004  Tim Janik  <timj@gtk.org>

	* glib-extra.h: copied over the newest incarnation of G_DEFINE_TYPE()
	from glib, which type_name_ prefix parent_class variables.

Sat Jan 24 06:55:57 2004  Tim Janik  <timj@gtk.org>

	* sfidl-cxx.cc: switch to a get_element() method for sequences,
	return SfiRecFields for get_fields() of records.

	* sfiparams.[hc]: reimplemented boxed type helpers, based on an
	element pspec for sequences and SfiRecFields for records.

Sat Jan 24 04:44:00 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.*: Make rename() prefix namespace_seperator for
	absolute namespaces only if the seperator is "::", as for C++, its
	useful, for the other supported languages, useless. Result: make check
	passes now, finally.

	* testsfidl.c: Changed the message from "Foo." to something more
	meaningful.

Sat Jan 24 04:16:43 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl.cc sfidl-options.* sfidl-factory.* Makefile.am: Added a new
	mechanism, which allows bindings to register themselves in the option
	parser, using factories. This allows sfidl to know which bindings it
	supports, even though the binding will only need to setup its factory
	within its own C++ file.

	* sfidl-module.cc bse-plugin-generator.cc: Use this mechanism for the
	--module option.

Sat Jan 24 03:08:44 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.*: Added generic rename function, which can be used
	to reformat typenames. Should be able to do everything that
	makeLowerName, makeMixedName, makeUpperName, makeGTypeName did, and
	more (at the cost of having a more complex API).

	* Makefile.am testsfidl.cc: Added test code.

Sat Jan 24 01:50:55 2004  Tim Janik  <timj@gtk.org>

	* sfidl-cxx.cc: fixed get_fields() usage in pspec constructors,
	imlpemented get_fields() for sequences.

Sat Jan 24 01:01:43 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-cxx.cc sficxx.h: Made the to_seq conversion function static,